intel/bench_214_work/extr_.labq3map2libsddslibddslib.c_DDSDecodeAlpha3BitLinear_with_main/log.txt
bench_214_work/extr_.labq3map2libsddslibddslib.c_DDSDecodeAlpha3BitLinear_with_main/extr_.labq3map2libsddslibddslib.c_DDSDecodeAlpha3BitLinear_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
